@@ -218,7 +218,7 @@ block|}
 block|}
 DECL|method|create
 specifier|public
-name|TokenStream
+name|EdgeNGramTokenFilter
 name|create
 parameter_list|(
 name|TokenStream
