@@ -276,7 +276,7 @@ expr_stmt|;
 block|}
 DECL|method|create
 specifier|public
-name|TokenStream
+name|KeepWordFilter
 name|create
 parameter_list|(
 name|TokenStream
