@@ -144,7 +144,7 @@ expr_stmt|;
 block|}
 DECL|method|create
 specifier|public
-name|TokenStream
+name|LengthFilter
 name|create
 parameter_list|(
 name|TokenStream
