@@ -186,7 +186,7 @@ expr_stmt|;
 block|}
 DECL|method|create
 specifier|public
-name|TokenStream
+name|NGramTokenFilter
 name|create
 parameter_list|(
 name|TokenStream
