@@ -252,7 +252,7 @@ block|}
 block|}
 DECL|method|create
 specifier|public
-name|TokenStream
+name|PatternReplaceFilter
 name|create
 parameter_list|(
 name|TokenStream
