@@ -488,7 +488,7 @@ block|}
 block|}
 DECL|method|create
 specifier|public
-name|TokenStream
+name|PhoneticFilter
 name|create
 parameter_list|(
 name|TokenStream
