@@ -164,7 +164,7 @@ expr_stmt|;
 block|}
 DECL|method|create
 specifier|public
-name|TokenStream
+name|SnowballFilter
 name|create
 parameter_list|(
 name|TokenStream
