@@ -60,7 +60,7 @@ name|BaseTokenFilterFactory
 block|{
 DECL|method|create
 specifier|public
-name|TokenStream
+name|StandardFilter
 name|create
 parameter_list|(
 name|TokenStream
