@@ -70,7 +70,7 @@ name|BaseTokenizerFactory
 block|{
 DECL|method|create
 specifier|public
-name|TokenStream
+name|StandardTokenizer
 name|create
 parameter_list|(
 name|Reader
