@@ -640,7 +640,7 @@ return|;
 block|}
 DECL|method|create
 specifier|public
-name|TokenStream
+name|SynonymFilter
 name|create
 parameter_list|(
 name|TokenStream
