@@ -170,7 +170,7 @@ block|}
 block|}
 DECL|method|create
 specifier|public
-name|TokenStream
+name|TrimFilter
 name|create
 parameter_list|(
 name|TokenStream
