@@ -185,7 +185,7 @@ expr_stmt|;
 block|}
 DECL|method|create
 specifier|public
-name|TokenStream
+name|WordDelimiterFilter
 name|create
 parameter_list|(
 name|TokenStream
